--- a/less/about.less
+++ b/less/about.less
@@ -14,6 +14,7 @@
 		.flex(row, wrap, center, center);
 		.aboutUsCard {
 			.minWidth-maxWidth(300px, 350px);
+			height: 500px;
 			padding: 20px;
 			h4 {
 				text-align: center;
